--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
 Options -Indexes
-RewriteBase /
+RewriteBase /cdn/
 RewriteCond %{REQUEST_URI} !^/index.php
 RewriteRule .* index.php [L]
