--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,18 @@
 RewriteEngine On
 Options -Indexes
-RewriteBase /cdn/
+RewriteBase /
+
+#RewriteCond %{HTTP_REFERER} !^$ [NC]
+#RewriteCond %{HTTP_REFERER} !mikuclub.fun [NC]
+#RewriteCond %{HTTP_REFERER} !mikuclub.cc [NC]
+#RewriteCond %{HTTP_REFERER} !mikuclub.eu [NC]
+#RewriteCond %{HTTP_REFERER} !mikuclub.online [NC]
+#RewriteCond %{HTTP_REFERER} !mikuclub.win [NC]
+#RewriteCond %{HTTP_REFERER} !mikuclub.uk [NC]
+#RewriteCond %{HTTP_REFERER} !mikuapp.fun [NC]
+#RewriteCond %{HTTP_REFERER} !localhost [NC]
+#RewriteRule .*\.(gif|jpg|jpeg|png|bmp|webp)$ – [L,R=404]
+
+
 RewriteCond %{REQUEST_URI} !^/index.php
 RewriteRule .* index.php [L]
